--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "firebase": "^5.8.3",
-    "tiny-slider": "^2.9.1",
-    "vue": "^2.5.22",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "@firebase/app": "0.6.9",
+    "firebase": "7.17.2",
+    "tiny-slider": "2.9.1",
+    "vue": "2.5.22",
+    "vue-router": "3.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "postcss-import": "^12.0.1",
-    "tailwindcss": "^0.7.4",
-    "vue-template-compiler": "^2.5.21"
+    "@vue/cli-plugin-babel": "3.4.0",
+    "@vue/cli-plugin-eslint": "3.4.0",
+    "@vue/cli-service": "3.4.0",
+    "@vue/eslint-config-airbnb": "4.0.0",
+    "babel-eslint": "10.0.1",
+    "eslint": "5.8.0",
+    "eslint-plugin-vue": "5.0.0",
+    "postcss-import": "12.0.1",
+    "tailwindcss": "0.7.4",
+    "vue-template-compiler": "2.5.22"
   }
 }
