--- a/package.json
+++ b/package.json
@@ -5,26 +5,41 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js"
   },
   "dependencies": {
     "@firebase/app": "0.6.9",
     "firebase": "7.17.2",
     "tiny-slider": "2.9.1",
-    "vue": "2.5.22",
+    "vue": "2.6.11",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.4.0",
-    "@vue/cli-plugin-eslint": "3.4.0",
-    "@vue/cli-service": "3.4.0",
-    "@vue/eslint-config-airbnb": "4.0.0",
-    "babel-eslint": "10.0.1",
-    "eslint": "5.8.0",
-    "eslint-plugin-vue": "5.0.0",
+    "@babel/core": "7.11.1",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/preset-env": "7.11.0",
+    "@vue/babel-preset-app": "4.5.3",
+    "add-asset-html-webpack-plugin": "3.1.3",
+    "autoprefixer": "9.8.6",
+    "babel-loader": "8.1.0",
+    "clean-webpack-plugin": "3.0.0",
+    "css-loader": "4.2.1",
+    "file-loader": "6.0.0",
+    "html-webpack-plugin": "4.3.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-import": "12.0.1",
+    "postcss-loader": "3.0.0",
+    "style-loader": "1.2.1",
     "tailwindcss": "0.7.4",
-    "vue-template-compiler": "2.5.22"
+    "terser-webpack-plugin": "4.1.0",
+    "url-loader": "4.1.0",
+    "vue-loader": "15.9.3",
+    "vue-template-compiler": "2.6.11",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   }
 }
