--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js"
+    "start": "http-server dist",
+    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "build": "webpack --config ./webpack.config.js",
+    "build:dll": "webpack --config ./webpack.dll.config.js"
   },
   "dependencies": {
     "@firebase/app": "0.6.9",
@@ -29,6 +29,8 @@
     "css-loader": "4.2.1",
     "file-loader": "6.0.0",
     "html-webpack-plugin": "4.3.0",
+    "http-server": "0.12.3",
+    "mini-css-extract-plugin": "0.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
